// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Products renders chat styling if provided 1`] = `
<NavItem
  product="chat"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="chat"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--chat "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders connect styling if provided 1`] = `
<NavItem
  product="connect"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="connect"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--connect "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders explore styling if provided 1`] = `
<NavItem
  product="explore"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="explore"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--explore "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders guide styling if provided 1`] = `
<NavItem
  product="guide"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="guide"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--guide "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders message styling if provided 1`] = `
<NavItem
  product="message"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="message"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--message "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders support styling if provided 1`] = `
<NavItem
  product="support"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="support"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--support "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem Products renders talk styling if provided 1`] = `
<NavItem
  product="talk"
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      product="talk"
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo--talk "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem States renders current styling if provided 1`] = `
<NavItem
  current={true}
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      current={true}
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item is-current "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem States renders focused styling if provided 1`] = `
<NavItem
  focused={true}
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item is-focused "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem States renders hovered styling if provided 1`] = `
<NavItem
  hovered={true}
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      hovered={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item is-hovered "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem renders brandmark styling if provided 1`] = `
<NavItem
  brandmark={true}
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      brandmark={true}
      focused={false}
      logo={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={-1}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo c-chrome__nav__item--brandmark "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={-1}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem renders default styling 1`] = `
<NavItem>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={0}
    >
      <button
        className="c-chrome__nav__item "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={0}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;

exports[`NavItem renders logo styling if provided 1`] = `
<NavItem
  logo={true}
>
  <KeyboardFocusContainer>
    <NavItem__StyledNavItem
      focused={false}
      logo={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      tabIndex={-1}
    >
      <button
        className="c-chrome__nav__item c-chrome__nav__item--logo "
        data-garden-id="chrome.nav_item"
        data-garden-version="version"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        tabIndex={-1}
      />
    </NavItem__StyledNavItem>
  </KeyboardFocusContainer>
</NavItem>
`;
